--- a/playbook.yml
+++ b/playbook.yml
@@ -8,9 +8,11 @@
     - name: Add ubuntu-cloud keyring
       apt: pkg=ubuntu-cloud-keyring update_cache=yes
     - name: Add cloud repo
-      apt_repository: repo='deb http://ubuntu-cloud.archive.canonical.com/ubuntu precise-updates/cloud-tools main' state=present
+      apt_repository: repo='deb http://ubuntu-cloud.archive.canonical.com/ubuntu precise-updates/cloud-tools main' state=present update_cache=yes
     - name: Add cloud src repo
       apt_repository: repo='deb-src http://ubuntu-cloud.archive.canonical.com/ubuntu precise-updates/cloud-tools main' state=present
+    - name: Update system
+      apt: upgrade=dist update_cache=yes
     - name: Install maas packages
       shell: DEBIAN_FRONTEND=noninteractive apt-get install -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' -f -q -y maas maas-dns maas-dhcp </dev/null
     - name: Add maas superuser
